; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_write.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @realfs_write(%struct.fd* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.fd*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.fd* %0, %struct.fd** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.fd*, %struct.fd** %5, align 8
  %10 = getelementptr inbounds %struct.fd, %struct.fd* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @write(i32 %11, i8* %12, i64 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = call i64 (...) @errno_map()
  store i64 %18, i64* %4, align 8
  br label %21

19:                                               ; preds = %3
  %20 = load i64, i64* %8, align 8
  store i64 %20, i64* %4, align 8
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i64, i64* %4, align 8
  ret i64 %22
}

declare dso_local i64 @write(i32, i8*, i64) #1

declare dso_local i64 @errno_map(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
